Fix patrons page display on smaller resolutions

--- a/css/patrons.css
+++ b/css/patrons.css
@@ -4,7 +4,6 @@
 }
 #sponsors-header {
     font-family: "Roboto Condensed", sans-serif;
-    font-size: 3.5rem;
     text-transform: uppercase;
     font-weight: 600;
     color: white;
@@ -28,8 +27,7 @@
 width: 150px;
 height: 150px;
 border-radius: 50%;
-margin-right: 2rem;
-margin-bottom: 1rem;
+margin: 1rem 2rem;
 }
 #media-patrons-col {
     border-right: 1px solid #ffffff;
@@ -47,6 +45,13 @@ margin-bottom: 1rem;
 #other-patrons-table table tbody, #other-patrons-table table tr, #other-patrons-table table tr td {
     display: block;
 }
+#crowdfunding-header, #media-patrons-header {
+    font-family: "Roboto Condensed", sans-serif;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: white;
+    padding: 0 .5rem;
+}
 #crowdfunding-img-container {
     text-align: center;
 }
@@ -58,8 +63,8 @@ margin-bottom: 1rem;
         border-right: none;
     }
 }
-@media(max-width: 977px) {
-    #title, #subtitle {
-        font-size: 2.5rem;
+@media(max-width: 438px) {
+    #crowdfunding-img-container img {
+        width: 100%;
     }
 }
